kustomize/monitoring-extra/node-exporter-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-node-exporter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: prometheus-node-exporter
      app.kubernetes.io/name: prometheus-node-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: vmagent
              app.kubernetes.io/name: victoria-metrics-agent
      ports:
        - port: 9100
          protocol: TCP
