kustomize/monitoring-extra/prometheus-adapter-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-adapter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: prometheus-adapter
      app.kubernetes.io/name: prometheus-adapter
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: https
          protocol: TCP
